<resources>
    <string name="app_name">To Visit</string>

    <!--dialogs-->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="error_unknown">Something went wrong =(</string>
    <string name="warning">Warning</string>

    <!--settings-->
    <string name="settings_category_search">Search settings</string>
    <string name="settings_radius">Search radius</string>
    <string name="settings">Settings</string>
    <string name="first_radius">1000</string>
    <string name="second_radius">2000</string>
    <string name="third_radius">5000</string>
    <string name="forth_radius">10000</string>
    <string name="fifth_radius">20000</string>
    <string-array name="radius_values_titles">
        <item>1000 m</item>
        <item>2000 m</item>
        <item>5000 m</item>
        <item>10000 m</item>
        <item>20000 m</item>
    </string-array>

    <!--preference-->
    <string name="preference_search_radius" translatable="false">search radius</string>
    <string-array name="radius_values">
        <item>@string/first_radius</item>
        <item>@string/second_radius</item>
        <item>@string/third_radius</item>
        <item>@string/forth_radius</item>
        <item>@string/fifth_radius</item>
    </string-array>

    <!--behavior-->
    <string name="BackDropBottomSheetBehavior">com.jenshen.tovisit.ui.behavior.BackdropBottomSheetBehavior</string>
    <string name="BottomSheetBehaviorGoogleMapsLike">com.jenshen.tovisit.ui.behavior.BottomSheetBehaviorGoogleMapsLike</string>
    <string name="ScrollAwareFABBehavior">com.jenshen.tovisit.ui.behavior.ScrollAwareFABBehavior</string>
    <string name="MergedAppBarLayoutBehavior">com.jenshen.tovisit.ui.behavior.MergedAppBarLayoutBehavior</string>
    <string name="ScrollingAppBarLayoutBehavior">com.jenshen.tovisit.ui.behavior.ScrollingAppBarLayoutBehavior</string>

    <!-- near by places -->
    <string name="place_is_open">Is open</string>
    <!--permissions location-->
    <string name="rationale_location">This app needs access to your place Location to know where you are.</string>
    <string name="rationale_ask_again">This app may not work correctly without the requested permissions. Open the app settings screen to modify app permissions.</string>
    <string name="title_settings_dialog">Permissions Required</string>







    <string name="action_settings">Settings</string>

    <string name="key_binding_default_toolbar_name">Modal-Toolbar-Title</string>

    <string name="dummy_text">Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.\n\nLorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo."</string>




</resources>
